Add alias target
Add alias target meshoptimizer::meshoptimizer to CMakeLists.txt so projects can access the target the same through either find_package or adding the project as a subdirectory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ if(MESHOPT_BUILD_SHARED_LIBS)
 else()
     add_library(meshoptimizer STATIC ${SOURCES})
 endif()
+add_library(meshoptimizer::meshoptimizer ALIAS meshoptimizer)
 
 target_include_directories(meshoptimizer INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>")
 
